--- a/src/components/FormularioPeliculas.css
+++ b/src/components/FormularioPeliculas.css
@@ -7,7 +7,7 @@
   	display: block;
   	margin: 50px 50px;
   	text-align: center;
-	width: 400px;
+	width: 300px;
 	padding: 20px;
 	border: none;
 	outline: none;
@@ -48,10 +48,10 @@
 }
 
 
-@media all and (min-width: 960px) {
+@media all and (min-width: 768px) {
 
   .SearchForm__input {
-	width: 750px;
+	width: 700px;
   }
 
   .boton-buscadorpeliculas{
@@ -60,3 +60,10 @@
 
 
 }
+@media all and (min-width: 320px) {
+
+	.SearchForm__input {
+	  /* width: 250px; */
+	  margin: 40px 34px;
+	}
+} 
