--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,11 +1,14 @@
-.media-content {
+.card-content {
     margin-top: 10px;
+    display: block;
+    text-align: center;
     color: #FF6231;
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 15px;
 }
+
 
 .movie-year{
     margin-top: 10px;
@@ -19,3 +22,9 @@
 }
 
 
+@media all and (min-width: 360px) {
+    .media-content {
+        display: block;
+        text-align: center;
+    }
+}
